<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">GoFit</string>
	<string name="home_text1">Welcome, User!</string>
	<string name="home_text2">Exercises</string>
	<string name="home_text3">Workouts</string>
	<string name="home_text4">Goals</string>
	<string name="home_text5">Achievements</string>
	<string name="home_text6">Recent Goal Progress</string>
	<string name="home_text7">Recent Workouts</string>
	<string name="goals_text1">Goals</string>
	<string name="goals_buttontext1">Add New</string>
	<string name="goals_text2">Lose 10 Pounds</string>
	<string name="goals_text3">Deadline: 05/23/14</string>
	<string name="goals_text4">Goal: Bench 160lbs.</string>
	<string name="goals_text5">Deadline: 05/29/14</string>
	<string name="goals_text6">Goal: Run 7 minute mile</string>
	<string name="goals_text7">Deadline: 09/20/14</string>
	<string name="ex_text1">Exercises</string>
	<string name="ex_text2">Bicep</string>
	<string name="ex_text3">Name</string>
	<string name="ex_text4">Weight</string>
	<string name="ex_buttontext1">Add New</string>
	<string name="ex_text5">Sets</string>
	<string name="ex_text6">Reps</string>
	<string name="ex_text7">Updated</string>
	<string name="reg_descrp">Welcome to GoFit! 
	    Before we begin, please complete some information about yourself!
    </string>
	<string name="reg_text3">Name:</string>	
	<string name="reg_text5">Age:</string>
	<string name="reg_text7">Height(in.):</string>
	<string name="reg_text9">Weight(lbs.):</string>
	<string name="reg_buttontext">Submit</string>
	<string name="exf_descrp">Add New Exercise</string>
	<string name="exf_text3">Name:</string>
	<string name="exf_text5">Weight:</string>
	<string name="exf_text7">Sets:</string>
	<string name="exf_text9">Reps:</string>
	<string name="exf_button1">Submit</string>
	<string name="wo_text2">Workouts</string>
	<string name="wo_buttontext1">Add New Workout</string>
	<string name="lf_descrp_hint">Enter some details about your workout here...</string>
	<string name="lf_buttontext1">Add Photo</string>
	<string name="lf_buttontext2">Add Audio</string>
	<string name="lf_buttontext3">Submit</string>
	<string name="wl_button1">Play Audio</string>
	<string name="gf_text2">Add New Goal</string>
	<string name="gf_text4">Goal description:</string>
	<string name="gf_text6">Deadline:</string>
	<string name="gf_buttontext1">Submit</string>
	<string name="achievements_text1">Achievements</string>
	<string name="achievements_text2">Goals completed:</string>
	<string name="achievements_text3">Fastest time completed:</string>
	<string name="achievements_text4">Statistics</string><string name="zero">0</string>
	
</resources>
