<?xml version="1.0" encoding="utf-8"?>
<!-- gofit_exercisesform.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingLeft="7dp"
    android:paddingRight="7dp"
    android:paddingTop="7dp" >

    <TextView
        android:id="@+id/exf_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:paddingTop="40dp" />

    <TextView
        android:id="@+id/exf_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:text="@string/exf_descrp"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/exf_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/exf_text3"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/exf_text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/exf_text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/exf_text5"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/exf_text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/exf_text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/exf_text7"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/exf_text8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/exf_text9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/exf_text9"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/exf_text10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" >
            </EditText>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/exf_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exf_button1" />
    </LinearLayout>

</LinearLayout>