<?xml version="1.0" encoding="utf-8"?>
<!-- gofit_goalsform.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingLeft="7dp"
    android:paddingRight="7dp"
    android:paddingTop="7dp" >

    <TextView
        android:id="@+id/gf_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:paddingTop="40dp" />

	    <TextView
	        android:id="@+id/gf_text2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:paddingLeft="10dp"
	        android:paddingTop="15dp"
	        android:paddingBottom="20dp"
	        android:text="@string/gf_text2"
	        android:textSize="20sp" />
    
        <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/gf_text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/gf_text4"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/gf_text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/gf_text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/gf_text6"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/gf_text7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" >
            </EditText>
        </TableRow>
    </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/filler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <Button
                android:id="@+id/gf_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gf_buttontext1" />

        </LinearLayout>

</LinearLayout>