<?xml version="1.0" encoding="utf-8"?>
<!-- gofit_goals.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingTop="7dp"
    tools:ignore="InefficientWeight" >

    <TextView
        android:id="@+id/goals_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:paddingTop="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/goals_text1"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.95"
            android:ems="10"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:text="@string/goals_text1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/goals_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goals_buttontext1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/goal_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>